# proxy-mediator

./: .pre-commit-config.yaml  README.md  docker-compose.public.yml  docker-compose.yml  pyproject.toml
.github/workflows/: code-quality-check.yml  dco.yml  dco_check.sh  publish-proxy-mediator.yml  publish-setup.yml  publish.yml  push.yml  tests.yml
docker/: Dockerfile  agent-tunnel-wait.sh  docker-compose.yml  wait
docker/setup/: Dockerfile  README.md  main.py  pyproject.toml
int/: Dockerfile.test.runner  docker-compose.yml  pyproject.toml
int/tests/: __init__.py  conftest.py  test_proxy_mediator_connections.py
proxy_mediator/: __init__.py  __main__.py  admin.py  agent.py  askar_store.py  connection.py  connections.py  doc_normalization.py  encode.py  error.py  message_retriever.py  protocolstate.py  resolver.py  store.py
proxy_mediator/protocols/: __init__.py  basicmessage.py  connections.py  constants.py  coordinate_mediation.py  oob_didexchange.py  routing.py
tests/: test_delete_me.py  test_routes.py  test_store.py
