[tool.poetry]
name = "proxy-mediator"
version = "0.1.0"
description = "Mediator service used to enable cloud agents to run behind a firewall"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
aries-staticagent = "^0.9.0-rc3"
pydantic = "^1.8.2"
python-statemachine = "^0.8.0"
inflection = "^0.5.1"
ConfigArgParse = "^1.5.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
flake8 = "^3.9.2"
black = "^21.9b0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
