[tool.poetry]
name = "proxy-mediator"
version = "0.1.3"
description = "Mediator service used to enable cloud agents to run behind a firewall"
authors = ["Daniel Bluhm <dbluhm@pm.me>", "Char Howland <char@indicio.tech>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
aries-staticagent = "^0.9.0-rc3"
pydantic = "^1.8.2"
python-statemachine = "^0.8.0"
inflection = "^0.5.1"
ConfigArgParse = "^1.5.3"
aries-askar = "^0.2.2"
multiformats = "^0.2.1"
typing-extensions = "4.5.0"  # Pin to fix issue in multiformats

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
black = "23.7.0"
ruff = "0.0.287"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
useLibraryCodeForTypes = true

[tool.ruff]
select = ["E", "F", "C", "D"]

ignore = [
    # Google Python Doc Style
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
    "D202", # Allow blank line after docstring
    "D104", # Don't require docstring in public package
]

line-length = 90

[tool.ruff.per-file-ignores]
"**/{tests}/*" = ["F841", "D", "E501"]
