[tool.poetry]
name = "proxy-mediator-setup"
version = "0.1.2"
description = "Automated setup of proxy mediator and ACA-Py instance"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.19.0"
controller = {git = "https://github.com/Indicio-tech/acapy-minimal-example.git"}

[tool.poetry.dev-dependencies]
black = "23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
useLibraryCodeForTypes = true
